# like-galaga-but-different

./: Cargo.toml  README.md
assets/textures/: baddie.aseprite  bullet.aseprite  ship.aseprite
src/: main.rs
src/components/: bullet.rs  health.rs  mod.rs  ship.rs  shoots.rs
src/systems/: boundary.rs  boundary_initialization.rs  controller.rs  damage.rs  enemy_health.rs  enemy_spawn.rs  mod.rs  player_shoots.rs  position_text.rs  ship_initialization.rs  shooter.rs
