[package]
name = "like-galaga-but-different"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = [] }
bevy_rapier2d = { version = "0.10.2", features = ["simd-nightly", "parallel", "serde-serialize", "render"]}
bevy_fly_camera = "0.7.0"
