[package]
name = "like-galaga-but-different"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", features = ["dynamic"] }
bevy_rapier2d = { version = "*", features = ["simd-nightly", "parallel", "serde-serialize", "render"]}

